# chibi-tech-vulkan

./: .gitignore  Cargo.toml  README.md  imgui.ini  rust-toolchain.toml
assetlib/: Cargo.toml
assetlib/src/: lib.rs
assetlib/src/importer/: mod.rs  obj.rs
assetlib/src/material/: mod.rs
assetlib/src/mesh/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/math/: float2.rs  float4.rs
common/src/util/: id.rs
demos/testbed/: Cargo.toml
demos/testbed/src/: main.rs
engine/: Cargo.toml  build.rs
engine/assets/shaders/: colored_triangle.frag  colored_triangle.vert  compile.bat  compile.sh  gradient.comp  gradient_color.comp  sky.comp
engine/src/: lib.rs
engine/src/assets/: material.rs  mesh.rs  mod.rs  texture.rs
engine/src/core/: asset_system.rs  engine.rs  mod.rs  os.rs
engine/src/math/: float3.rs  float4.rs  float4x4.rs  mod.rs
engine/src/renderer/: buffer.rs  command_buffer.rs  material.rs  material_system.rs  mesh.rs  mod.rs  shader.rs  system.rs  texture.rs  thread.rs  util.rs
engine/src/renderer/graphics/: api.rs  consts.rs  gpu_command_buffer.rs  gpu_command_pool.rs  gpu_descriptors.rs  gpu_device.rs  gpu_device_context.rs  gpu_pipeline.rs  gpu_swapchain.rs  gpu_utils.rs  mod.rs
engine/src/util/: ffi.rs  id.rs  mod.rs
engine/src/window/: mod.rs
engine/src/window/glfw/: api.rs  mod.rs
scripts/: setup_deps.sh
